css: Do better to ensure menu text is readable
In case background is adjusted, a suitable text
color should also be chosen. Rocket science!

--- a/public/css/icinga/configmenu.less
+++ b/public/css/icinga/configmenu.less
@@ -233,6 +233,7 @@
   position: absolute;
   border: 1px solid @gray-lighter;
   background: @body-bg-color;
+  color: @text-color;
   box-shadow: 0 0 1em 0 rgba(0,0,0,.25);
   z-index: 15;
   .rounded-corners();
